--- a/README
+++ b/README
@@ -2,6 +2,6 @@ WEA project prototype
 
 Make sure to npm install and run the restaurant-api to view the menu.
 
-For the "contact us" section, we have made a database using MongoDB to
-store user emails. The database does indeed store information when we run the
+For the "contact us" section, we used MongoDB to
+store user emails. It stores information when we run the
 web app locally, but it does not work for the public.
